--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,1 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This is a blog I built in Ruby on Rails, using Ruby 2.2.3. This project was submitted for an assignment given during the web development bootcamp I participated in at the New York Code + Design Academy from April to June 2016.
